# ffmpeg-wrapper

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  command_templates.py  conv.py  myfunc.py  pyproject.toml  requirements.txt  test_conv.py
src/ffmpeg_wrapper/: __init__.py  conv.py
src/pyffmpeg_wrapper/: __init__.py  command_templates.py
tests/: test_conv.py
