[project]
name = "ffmpeg-wrapper"
version = "0.1.0"
authors = [{ name = "Daniel Nemeth", email = "daniel.nemeth83@yahoo.com" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
]
