[project]
name = "ffmpeg-wrapper"
version = "0.1.0"
authors = [{ name = "Daniel Nemeth", email = "daniel.nemeth83@yahoo.com" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "ruff>=0.15.4",
]

[project.scripts]
ffmpeg_wrapper = "ffmpeg_wrapper.conv:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[tool.uv_build]
src-layout = true

[tool.uv]
package = true

[tool.coverage.run]
source = ["ffmpeg_wrapper"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
check_untyped_defs = true
warn_return_any = true

[tool.ruff]
src = ["src"]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "PL"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
